avancement des corrections demandés soutenance

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 				<!-- Ville -->
 				<div class="bloc-city">
 					<i class="fa-solid fa-location-dot icon-loc"></i>
-					<input type="text" class="size-city" value="Paris, Belleville">
+					<input type="search" class="size-city" value="Paris, Belleville">
 				</div>
-				
 				<nav>
 					<div class="reserve">
 						<h1>Réservez le menu qui vous convient </h1>
@@ -52,7 +51,7 @@
 							<div class="number-container">
 								<div class="number">1</div>
 							</div>
-							<i class="fa-solid fa-mobile-screen-button icon-flex"></i>
+							<i class="fa-solid fa-mobile-screen-button icon-flex1"></i>
 							<p> Choisissez un restaurant </p>
 						</div>
 
@@ -61,7 +60,7 @@
 							<div class="number-container">
 								<div class="number">2</div>
 							</div>
-							<i class="fa-solid fa-list-ul icon-flex"></i>
+							<i class="fa-solid fa-list-ul icon-flex1"></i>
 							<p> Composez votre menu </p>
 						</div>
 
@@ -70,7 +69,7 @@
 							<div class="number-container">
 								<div class="number">3</div>
 							</div>
-							<i class="fa-solid fa-store icon-flex"></i>
+							<i class="fa-solid fa-store icon-flex1"></i>
 							<p> Dégustez au restaurant </p>
 						</div>
 					</div>
@@ -164,13 +163,17 @@
 				<div class="footer1 reverse">
 					<p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
 				</div>
+				<div>
 				<div class="footer2 reverse">
 					<p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
-				</div>
+				</div> </div>
+				<div>
 				<p class="footer3">Mention légales</p>
-				<span class="footer4"><a href="mailto:contact@ohmyfood.com">Contact</a></span> 
+				<div class="footer4"><a href="mailto:contact@ohmyfood.com">Contact</a> 
+				</div>
+			</div>
 			</footer>
-		</div>
 		<div class="overlay"></div>
+		</div>
 	</body>
 </html>
