--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -159,7 +159,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="food-item">
                                 <div class="size-item">
                                     <p class="marge1">Millefeuille croustillant</p>
@@ -176,22 +175,30 @@
 
                         <div class="button">Commander</div>
                     </div>
-
-
                 </div>
             </div>
         </main>
         <!-- FOOTER -->
         <footer class="flex-desktop">
+            <div></div>
             <div class="logo-footer"> ohmyfood </div>
-            <div class="footer1 reverse">
-                <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+
+            <div class="groupe2">
+                <div class="footer-mention">
+                    <p>Mention légales</p>
+                </div>
+                <div class="footer-contact">
+                    <p> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
+                </div>
             </div>
-            <div class="footer2 reverse">
-                <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+            <div class="groupe1">
+                <div class="footer-propose reverse">
+                    <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+                </div>
+                <div class="footer-devenir reverse">
+                    <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+                </div>
             </div>
-            <p class="footer3">Mention légales</p>
-            <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
         </footer>
     </div>
     <div class="overlay"></div>
