--- a/delice.html
+++ b/delice.html
@@ -187,15 +187,23 @@
         <footer class="flex-desktop">
             <div></div>
             <div class="logo-footer"> ohmyfood </div>
-            <div class="footer1 reverse">
-                <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
-            </div>
-            <div class="footer2 reverse">
-                <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
-            </div>
-            <p class="footer3">Mention légales</p>
-            <p class="footer4"> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
 
+            <div class="groupe2">
+                <div class="footer-mention">
+                    <p>Mention légales</p>
+                </div>
+                <div class="footer-contact">
+                    <p> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
+                </div>
+            </div>
+            <div class="groupe1">
+                <div class="footer-propose reverse">
+                    <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+                </div>
+                <div class="footer-devenir reverse">
+                    <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
+                </div>
+            </div>
         </footer>
     </div>
     <div class="overlay"></div>
