--- a/a-l-francaise.html
+++ b/a-l-francaise.html
@@ -172,8 +172,7 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="button">Commander</div>
+                        <div class="button white">Commander</div>
                     </div>
                 </div>
             </div>
