--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 </div>
                 <!-- BOUTON EXPLORER-->
-                <div class="button white"> <a href="#restaurants-link">Explorer nos restaurants</a></div>
+                <div class="button"> <a href="#restaurants-link">Explorer nos restaurants</a></div>
             </nav>
         </header>
         <main>
@@ -77,7 +77,7 @@
             </section>
             <section>
                 <div class="restaurants">
-                    <h1 id="resturants-link" class="title2">Restaurants</h1>
+                    <h1 id="restaurants-link" class="title2">Restaurants</h1>
                     <!-- La palette du goût -->
                     <div class="card-desktop">
 
