--- a/palette.html
+++ b/palette.html
@@ -1,119 +1,70 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood</title>
-    <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/stylemenu.css">
-</head>
-
-<body>
-    <header>
-        <div class="bloc-logo">
-            <div class="icon-back">
-                <a id="back" href="index.html"> <i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i></a>
-            </div>
-            <img class="logo" src="images/logo/ohmyfood@2x.svg" alt="">
-            <div class="empty-div"></div>
-        </div>
-        <div class="size-img">
-            <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-        </div>
-    </header>
-    <main>
-        <div class="menu">
-            <div class="loader-wrapper">
-                <div class="loader-container">
-                    <div class="dot d1"></div>
-                    <div class="dot d2"></div>
-                    <div class="dot d3"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Ohmyfood</title>
+        <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/76764cbef3.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./css/stylemenu.css">
+    </head>
+    <body>
+        <header>
+            <div class="bloc-logo">
+                <div class="icon-back">
+                    <a id="back" href="index.html">
+                        <i class="fa-solid fa-arrow-left fa-xl fa-xl1"></i>
+                    </a>
                 </div>
+                <img class="logo" src="images/logo/ohmyfood@2x.svg" alt="">
+                <div class="empty-div"></div>
             </div>
-            <div class="flex">
-                <div class="header-container">
-                    <div class="title">
-                        <h1 class="title-restau"> La palette du goût</h1>
-                    </div>
-                    <div class="heart-btn heart-btn--accent">
-                        <i class="heart-btn__empty fa-regular fa-heart"></i>
-                        <i class="heart-btn__filled fa-solid fa-heart"></i>
-                    </div>
-                </div>
+            <div class="size-img">
+                <img class="size-img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
             </div>
-
-
-            <div class="entr">
-                <p class="upper">
-                    Entrées
-                </p>
-                <div class="food-item">
-                    <div class="size-item">
-                        <p class="marge1">Fricassée d'escargots</p>
-                        <p class="marge2">Au piment d'Espelette</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">25 €</div>
-                        <div class="check">
-                            <i class="fas fa-check-circle fa-lg"></i>
+        </header>
+        <main>
+            <div class="menu">
+                <div class="flex">
+                    <div class="header-container">
+                        <div class="title">
+                            <h1 class="title-restau">
+                                La palette du goût</h1>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="food-item">
-                <div class="size-item">
-                    <p class="marge1">Foie gras de canard mi-cuit</p>
-                    <p class="marge2">Et ses copeaux de truffe noire</p>
-                </div>
-                <div class="price-check-container">
-                    <div class="price">35 €</div>
-                    <div class="check">
-                        <i class="fas fa-check-circle fa-lg"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="food-item">
-                <div class="size-item">
-                    <p class="marge1">Oeuf au plat</p>
-                    <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
-                </div>
-                <div class="price-check-container">
-                    <div class="price">20 €</div>
-                    <div class="check">
-                        <i class="fas fa-check-circle fa-lg"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="plats">
-                <p class="upper">
-                    PLATS
-                </p>
-
-                <div class="food-item">
-                    <div class="size-item">
-                        <p class="marge1">Filet de boeuf aux herbes</p>
-                        <p class="marge2">Accompagné de sa ribambelle de légumes</p>
-                    </div>
-                    <div class="price-check-container">
-                        <div class="price">40 €</div>
-                        <div class="check">
-                            <i class="fas fa-check-circle fa-lg"></i>
+                        <div class="heart-btn heart-btn--accent">
+                            <i class="heart-btn__empty fa-regular fa-heart"></i>
+                            <i class="heart-btn__filled fa-solid fa-heart"></i>
                         </div>
                     </div>
                 </div>
 
+
+                <div class="entr">
+                    <p class="upper">
+                        Entrées
+                    </p>
+                    <div class="food-item">
+                        <div class="size-item">
+                            <p class="marge1">Fricassée d'escargots</p>
+                            <p class="marge2">Au piment d'Espelette</p>
+                        </div>
+                        <div class="price-check-container">
+                            <div class="price">25 €</div>
+                            <div class="check">
+                                <i class="fas fa-check-circle fa-lg"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="food-item">
                     <div class="size-item">
-                        <p class="marge1">Parmentier de queue de boeuf</p>
-                        <p class="marge2">A la truffe noire sur sa purée de panais</p>
+                        <p class="marge1">Foie gras de canard mi-cuit</p>
+                        <p class="marge2">Et ses copeaux de truffe noire</p>
                     </div>
                     <div class="price-check-container">
                         <div class="price">35 €</div>
@@ -125,29 +76,29 @@
 
                 <div class="food-item">
                     <div class="size-item">
-                        <p class="marge1">Filet de turbot</p>
-                        <p class="marge2">Aux agrumes</p>
+                        <p class="marge1">Oeuf au plat</p>
+                        <p class="marge2">Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="price-check-container">
-                        <div class="price">44 €</div>
+                        <div class="price">20 €</div>
                         <div class="check">
                             <i class="fas fa-check-circle fa-lg"></i>
                         </div>
                     </div>
                 </div>
 
-                <div class="desserts">
+                <div class="plats">
                     <p class="upper">
-                        DESSERTS
+                        PLATS
                     </p>
 
                     <div class="food-item">
                         <div class="size-item">
-                            <p class="marge1">Paris-Brest</p>
-                            <p class="marge2">Revisité</p>
+                            <p class="marge1">Filet de boeuf aux herbes</p>
+                            <p class="marge2">Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="price-check-container">
-                            <div class="price">18 €</div>
+                            <div class="price">40 €</div>
                             <div class="check">
                                 <i class="fas fa-check-circle fa-lg"></i>
                             </div>
@@ -156,11 +107,11 @@
 
                     <div class="food-item">
                         <div class="size-item">
-                            <p class="marge1">Macaron au chocolat d'exception</p>
-                            <p class="marge2">Et glace à la vanille de Madagascar</p>
+                            <p class="marge1">Parmentier de queue de boeuf</p>
+                            <p class="marge2">A la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="price-check-container">
-                            <div class="price">22 €</div>
+                            <div class="price">35 €</div>
                             <div class="check">
                                 <i class="fas fa-check-circle fa-lg"></i>
                             </div>
@@ -169,48 +120,99 @@
 
                     <div class="food-item">
                         <div class="size-item">
-                            <p class="marge1">Mousse au chocolat</p>
-                            <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
+                            <p class="marge1">Filet de turbot</p>
+                            <p class="marge2">Aux agrumes</p>
                         </div>
                         <div class="price-check-container">
-                            <div class="price">23 €</div>
+                            <div class="price">44 €</div>
                             <div class="check">
                                 <i class="fas fa-check-circle fa-lg"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="desserts">
+                        <p class="upper">
+                            DESSERTS
+                        </p>
+
+                        <div class="food-item">
+                            <div class="size-item">
+                                <p class="marge1">Paris-Brest</p>
+                                <p class="marge2">Revisité</p>
+                            </div>
+                            <div class="price-check-container">
+                                <div class="price">18 €</div>
+                                <div class="check">
+                                    <i class="fas fa-check-circle fa-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="food-item">
+                            <div class="size-item">
+                                <p class="marge1">Macaron au chocolat d'exception</p>
+                                <p class="marge2">Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <div class="price-check-container">
+                                <div class="price">22 €</div>
+                                <div class="check">
+                                    <i class="fas fa-check-circle fa-lg"></i>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="food-item">
+                            <div class="size-item">
+                                <p class="marge1">Mousse au chocolat</p>
+                                <p class="marge2">Au piment d'Espelette et à la truffe noire</p>
+                            </div>
+                            <div class="price-check-container">
+                                <div class="price">23 €</div>
+                                <div class="check">
+                                    <i class="fas fa-check-circle fa-lg"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="button">Commander</div>
+                <div class="button">Commander</div>
 
 
-        </div>
-    </main>
-    <!-- FOOTER -->
-    <footer class="flex-desktop">
-        <div></div>
-        <div class="logo-footer"> ohmyfood </div>
+            </div>
+        </main>
+        <!-- FOOTER -->
+        <footer class="flex-desktop">
+            <div></div>
+            <div class="logo-footer">
+                ohmyfood
+            </div>
 
-        <div class="groupe2">
-            <div class="footer-mention">
-                <p>Mention légales</p>
+            <div class="groupe2">
+                <div class="footer-mention">
+                    <p>Mention légales</p>
+                </div>
+                <div class="footer-contact">
+                    <p>
+                        <a href="mailto:contact@ohmyfood.com">Contact</a>
+                    </p>
+                </div>
             </div>
-            <div class="footer-contact">
-                <p> <a href="mailto:contact@ohmyfood.com">Contact</a></p>
-            </div>
-        </div>
 
 
-        <div class="groupe1">
-            <div class="footer-propose reverse">
-                <p><i class="fa-solid fa-utensils icon-footer"></i> Proposer un restaurant</p>
+            <div class="groupe1">
+                <div class="footer-propose reverse">
+                    <p>
+                        <i class="fa-solid fa-utensils icon-footer"></i>
+                        Proposer un restaurant</p>
+                </div>
+                <div class="footer-devenir reverse">
+                    <p>
+                        <i class="fa-solid fa-handshake-angle icon-footer"></i>
+                        Devenir partenaire</p>
+                </div>
             </div>
-            <div class="footer-devenir reverse">
-                <p><i class="fa-solid fa-handshake-angle icon-footer"></i> Devenir partenaire</p>
-            </div>
-        </div>
-    </footer>
-    <div class="overlay"></div>
-</body>
+        </footer>
+    </body>
 
 </html>
